--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proposal Day - Special Surprise</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>CodePen - Drag Papers ❤️</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <div class="container">
-        <!-- Envelope -->
-        <div class="envelope">
-            <div class="flap-top"></div>
-            <div class="flap-bottom"></div>
-            <div class="letter">
-                <p class="letter-content">Will you be mine?</p>
-            </div>
-        </div>
+<!-- partial:index.partial.html -->
+<!-- A pen by Developer Rahul  -->
+<div class="paper heart">
 
-        <!-- Butterflies -->
-        <div class="butterfly" id="butterfly1"></div>
-        <div class="butterfly" id="butterfly2"></div>
-        <div class="butterfly" id="butterfly3"></div>
+</div>
 
-        <!-- Music -->
-        <audio id="love-song" src="your-love-song.mp3"></audio>
-    </div>
+  
+<div class="paper image">
+  <p> and I fallen in</p>
+    <p>Love with You 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
 
-    <script src="script.js"></script>
+<div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+
+<div class="paper image">
+  <p>How can be </p>
+   <p> someone so cute ❤️ </p>
+
+  <img src="images/3.jpeg" />
+</div>
+
+
+
+<div class="paper red">
+<p class="p1"> and My Favorite</p>
+<p class="p2">Person 😍</p>
+</div>
+
+<div class="paper">
+<p class="p1">You are Cute </p>
+  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+</div>
+
+<div class="paper">
+<p class="p1">Drag the papers to move!</p>
+</div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
